adds explanation on r being R / N - 1

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -264,9 +264,10 @@ with which the strategy cooperated $(C_r)$, its match win count and the
 probability that the strategy cooperated in the opening move. Moreover, the
 probabilities of a strategy being in any of the four states ($CC, CD, DC, DD$),
 and the rate of which the strategy cooperated after each state. A feature that
-has been manually included is the \textbf{normalised rank}. The normalised rank,
+has been manually included is the \textbf{normalised rank}. The rank of a given
+strategy, denoted as \(R\), can vary between 0 and \(N-1\). Thus, the normalised rank,
 denoted as $r$, is calculated as a strategy's rank divided by the tournament's
-size ($N$). In the next section the performance of these strategies is evaluated
+size $N$ minus 1. In the next section the performance of these strategies is evaluated
 based on their normalised rank.
 
 \newcolumntype{g}{>{\columncolor{Gray}}c}
