add sentence about behaving too cooperative in conclusion

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1028,7 +1028,8 @@ the analysis demonstrated that, although for specific tournament types such as
 standard and probabilistic ending tournaments, dominant strategies exist
 there is not a single dominant type of strategies if the environments
 vary. Moreover, a strategy with a theory of mind should aim to adapt its behaviour
-based on the mean and median cooperators.
+based on the mean and median cooperators and should in general not be too
+cooperative.
 
 The \numberofstrategies strategies used in this manuscript have been mainly from
 the literature, and they have been accessible due to an open source software
