address TODO in conclusion

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1050,9 +1050,8 @@ The top rank strategies were performing both well and bad, and this indicates
 that in noisy tournaments there are not strategies that can guarantee winning.
 Overall, the top ranked strategies differed from one tournament type to
 another and the mechanism behind the winning strategies were all different.
-Even strategies designed to do good in one setting did better in others.
-On the whole ... (the ipd interactions are unique and there is no winning
-strategy) %TODO help from Vince
+Even strategies designed to perform well in one setting were demonstrated to be
+better in others.
 
 Section~\ref{section:evaluation_of_performance}, covered an analysis of
 performance based on several features associated with a strategy and with the
