--- a/paper/main.tex
+++ b/paper/main.tex
@@ -137,7 +137,7 @@ trained strategies based on lookup tables~\cite{Axelrod1987}, hidden markov
 models~\cite{Harper2017} and finite state automata~\cite{Miller1996}.
 
 Though only a select pieces of work have been discussed, the IPD literature is
-rich, and new strategies and competitions are being published every year. The
+rich, and new strategies and competitions are being published every year~\cite{Glynatsi2019}. The
 question, however, still remains the same: what is the best way to play the
 game? Compared to other works, whereas a few selected strategies are evaluated
 on a small number of tournaments, this manuscript evaluates the performance of \numberofstrategies
@@ -151,7 +151,7 @@ in this work has been made publicly available~\cite{data} and can be used
 for further analysis and insights.
 
 The different tournament types as well as the data collection, which is made
-possible due an open source package called Axelrod-Python~\cite{axelrodproject},
+possible due to an open source package called Axelrod-Python,
 are covered in Section~\ref{section:data_collection}.
 Section~\ref{section:top_performances}, focuses on the best performing
 strategies for each type of tournament and overall.
@@ -165,15 +165,15 @@ parameters and their definitions are given in Appendix~\ref{app:parameters}.
 
 For the purposes of this manuscript a data set containing results of IPD
 tournaments has been generated and is available at~\cite{data}. This was done using the
-open source package Axelrod-Python~\cite{axelrodproject}, and more specifically,
-version 3.0.0. Axelrod-Python allows for different types of IPD computer
+open source package Axelrod-Python library~\cite{axelrodproject} (APL), and more specifically,
+version 3.0.0. APL allows for different types of IPD computer
 tournaments to be simulated whilst containing a list of over 180 strategies.
 Most of these are strategies described in the literature with a few exceptions
 being strategies that have been contributed specifically to the package. This
 paper make use of \numberofstrategies strategies implemented in version 3.0.0. A
 list of the strategies is given in the Appendix~\ref{app:list_of_players}.
-Though Axelrod-Python features several tournament types, this work considers
-only standard, noisy, probabilistic ending and noisy probabilistic ending
+Although APL features several tournament types, this work considers
+standard, noisy, probabilistic ending and noisy probabilistic ending
 tournaments.
 
 \textbf{Standard tournaments}, are tournaments similar to that of Axelrod's
@@ -261,10 +261,11 @@ tournament. The information includes the strategy's rank, median score, the rate
 with which the strategy cooperated $(C_r)$, its match win count and the
 probability that the strategy cooperated in the opening move. Moreover, the
 probabilities of a strategy being in any of the four states ($CC, CD, DC, DD$),
-and the rate of which the strategy cooperated after each state. A measure that
-has been manually included is the \textbf{normalised rank}. The normalised rank,
+and the rate of which the strategy cooperated after each state. A feature that
+has been manually included is the \textbf{normalised rank}. The rank of a given
+strategy, denoted as \(R\), can vary between 0 and \(N-1\). Thus, the normalised rank,
 denoted as $r$, is calculated as a strategy's rank divided by the tournament's
-size ($N$). In the next section the performance of these strategies is evaluated
+size \(N - 1\). In the next section the performance of these strategies is evaluated
 based on their normalised rank.
 
 \newcolumntype{g}{>{\columncolor{Gray}}c}
@@ -339,10 +340,10 @@ hidden markov models (HMM), artificial neural networks (ANN), lookup tables
 (LookerUp) and stochastic lookup tables (Gambler) that have been trained using
 reinforcement learning algorithms (evolutionary and particle swarm algorithms).
 They have been trained to perform well against the strategies
-in~\cite{axelrodproject} in a standard tournament, thus their performance in the
+in APL in a standard tournament, thus their performance in the
 specific setting was anticipated. DoubleCrosser, and Fool Me Once, are
-strategies not from the literature but from~\cite{axelrodproject}. DoubleCrosser
-is a strategy that makes use of the number of turns because is set to defect on
+strategies not from the literature but from the APL. DoubleCrosser
+is a strategy that makes use of the number of turns because it is set to defect on
 the last two rounds. The strategy was expected to not perform as well in
 tournaments where the number of turns is not specified, but the strategy did not
 perform well in tournaments with noise either. Finally, Winner
@@ -371,7 +372,7 @@ Tit For 2 Tats, and at the time of writing this manuscript the
 contributors of~\cite{axelrodproject} made a new release where the strategy
 has been removed. However, for the purpose of this work the strategy is kept.
 The Retaliate and
-Limited Retaliate strategies are implemented in~\cite{axelrodproject} by the
+Limited Retaliate strategies are implemented in APL by the
 same contributor. They are strategies designed to defect if the opponent has
 tricked them more often than \(x\%\) of the times that they have
 done the same. Finally, in $4^{\text{th}}$ and $9^{\text{th}}$ place are Hunter
@@ -382,10 +383,11 @@ From Figure~\ref{fig:noisy_results}, it is evident that the normalised rank
 distributions in noisy environments are more variant with higher medians
 compared to standard tournaments. The distributions are bimodal. This indicates
 that although the top ranked strategies mainly performed well, there are several
-tournaments that they ranked in the bottom half. To gain a better understanding
-of the behaviour in noisy tournaments, the \(r\) distributions for the top 6
-of Figure~\ref{fig:noisy_results} strategies over the noise probability \(p_n\),
-are given in Figure~\ref{fig:effect_of_noise}.
+tournaments that they ranked in the bottom half. The bimodality of the \(r\)
+distributions can be explained by Figure~\ref{fig:noisy_results} which gives the
+\(r\) distributions for the top 6 strategies over the noise probability \(p_n\).
+Note that for \(p_n=0.5\) a strategy corresponds to a random player and for
+\(p_n=1\) a strategy is behaving in the exact opposite way than its design.
 
 \begin{figure}[!htbp]
     \centering
@@ -394,17 +396,11 @@ are given in Figure~\ref{fig:effect_of_noise}.
     \label{fig:noisy_results}
 \end{figure}
 
-Figure~\ref{fig:effect_of_noise} shows that for \(p_n\) values lower than 0.5
-Grumpy, Tit For 2 Tats and Slow Tit For Two Tat perform moderately, and \(e\),
-Cycle Hunter and Ricky QLearner perform poorly. At \(p_n=0.5\) all the
-distributions become bimodal. This is because with a noise probability of 0.5,
-all strategies correspond to a random player. Interestedly, for a \(p_n\) larger
-than 0.5 all of the 6 strategies become successful. Note that a value \(p_n=1\)
-corresponds to a strategy playing opposite from what it intended to. Thus, it is
-demonstrated that the successful strategies is noisy tournaments are sometimes
-effective when \(p_n=0.5\) but overall they are very successful whn they are
-playing opposite from their original design. If during the data collection a
-\(p_n\) strictly less 0.5 was considered then the top ranked strategies would be
+From Figure~\ref{fig:effect_of_noise} it is evident that the strategies highly
+ranked in noisy environments did so because of their performance in tournaments
+with \(p_n>0.5\). In tournaments with a noise probability lower than \(0.5\) the
+strategies performed poorly which is why their \(r\) distributions are bimodal.
+If during the data collection a \(p_n\) strictly less 0.5 was considered then the top ranked strategies would be
 different. There are a total of 5661 trials where \(p_n<0.5\) and the top ranked
 strategies are given in Table~\ref{table:subset_noise_result}. The median ranks
 are lower than before and the top spots are mainly overtaken by Meta strategies
@@ -578,11 +574,11 @@ whether the number of turns was fixed or not, the winning strategies were
 deterministic strategies designed to defect if the opponent tricked them more
 than a current amount of the times that they had tricked their opponent. However,
 if a value of noise strictly less than 0.5 was considered, then the successful
-strategies were strategies based on teams. In
-probabilistic ending tournaments most of the winning strategies were defecting
-strategies and trained finite state automata, designed by the same authors.
-These strategies only did better when the probability of the game ending after
-each turn was increased.
+strategies were strategies based on the behaviour of many strategies. In
+probabilistic ending tournaments most of the highly ranked strategies were defecting
+strategies and trained finite state automata, all by the authors of~\cite{Ashlock2006, Ashlock2014}.
+These strategies ranked high due to their performance in tournaments where the probability of the game ending after
+each turn was bigger than 0.1.
 Finally the performance of all \numberofstrategies
 strategies over the \numberofalltournaments tournaments in this manuscript was
 assessed on \(\bar{r}\). The top ranked strategies were a mixture of behaviours
@@ -603,10 +599,10 @@ but also overall.
 
 \section{Evaluation of performance}\label{section:evaluation_of_performance}
 
-The aim of this section is to explore the factors that contribute to a
-strategy's successful performance. The factors explored are measures regarding a
+The aim of this section is to explore the features that contribute to a
+strategy's successful performance. The features explored are measures regarding a
 strategy's behaviour, along with measures regarding the tournaments the
-strategies competed in. These are given in Table~\ref{table:manual_measures}.
+strategies competed in. These are given in Table~\ref{table:manual_features}.
 
 \newcolumntype{g}{>{\columncolor{Gray}}c}
 \begin{table}[h]
@@ -614,12 +610,12 @@ strategies competed in. These are given in Table~\ref{table:manual_measures}.
     \resizebox{\textwidth}{!}{
     \begin{tabular}{gcgcgc}
     \toprule
-    measure & measure explanation &  source & value type & min value & max value \\
+    feature & feature explanation &  source & value type & min value & max value \\
     \midrule
-stochastic  &  If a strategy is stochastic & strategy classifier from~\cite{axelrodproject} & boolean  & Na &  Na \\
-makes use of game &  If a strategy makes used of the game information & strategy classifier from~\cite{axelrodproject} & boolean  & Na &  Na \\
-makes use of length &  If a strategy makes used of the number of turns & strategy classifier from~\cite{axelrodproject} & boolean  & Na &  Na \\
-memory usage &  The memory size of a strategy divided by the number of turns & memory size from~\cite{axelrodproject} & float & 0 &  1 \\
+stochastic  &  If a strategy is stochastic & strategy classifier from APL & boolean  & Na &  Na \\
+makes use of game &  If a strategy makes used of the game information & strategy classifier from APL & boolean  & Na &  Na \\
+makes use of length &  If a strategy makes used of the number of turns & strategy classifier from APL & boolean  & Na &  Na \\
+memory usage &  The memory size of a strategy divided by the number of turns & memory size from APL & float & 0 &  1 \\
 SSE & A measure of how far a strategy is from ZD behaviour & method described in~\cite{Knight2019} & float & 0 & 1 \\
 max cooperating rate $(C_{\text{max}})$  & The biggest cooperating rate in a given tournament  & result summary  & float & 0 & 1\\
 min cooperating rate $(C_{\text{min}})$ & The smallest cooperating rate in a given tournament  & result summary  & float & 0 & 1\\
@@ -642,26 +638,26 @@ $k$ & The number of repetitions of a given tournament & trial summary & integer 
     \bottomrule
         \end{tabular}}
     \end{center}
-    \caption{The measures which are included in the performance evaluation analysis.}
-    \label{table:manual_measures}
+    \caption{The features which are included in the performance evaluation analysis.}
+    \label{table:manual_features}
 \end{table}
 
-Axelrod-Python makes use of classifiers to classify strategies according to
+APL makes use of classifiers to classify strategies according to
 various dimensions. These determine whether
 a strategy is stochastic or deterministic, whether it makes use of the number of
-turns or the game's payoffs. The memory usage measure is calculated as the
+turns or the game's payoffs. The memory usage feature is calculated as the
 memory size of strategy (which is specified in the strategies implementation
-in~\cite{axelrodproject}) divide by the number of turns. For example, Evolved
+in the APL) divide by the number of turns. For example, Evolved
 FSM 16 Noise 05 has a memory size of 16 and participated in a tournament where
 $n$ was 134. In the given tournament Evolved FSM 16 Noise 05 has a memory usage
 of 0.119. For tournaments with a probabilistic ending the number of turns was
-not collected, so the memory usage measure is not used for probabilistic ending
-tournaments. The SSE is a measure introduced in~\cite{Knight2019} which shows
+not collected, so the memory usage feature is not used for probabilistic ending
+tournaments. The SSE is a feature introduced in~\cite{Knight2019} which shows
 how close a strategy is to behaving as a ZDs, and subsequently, in an
 extortionate way. The method identifies the ZDs closest to a given strategy and
 calculates the algebraic distance between them, defined as SSE. A SSE value of 1
 indicates no extortionate behaviour at all whereas a value of 0 indicates that a
-strategy is behaving a ZDs. The rest of the factors considered are the $CC$ to
+strategy is behaving a ZDs. The rest of the features considered are the $CC$ to
 $C$, $CD$ to $C$, $DC$ to $C$, and $DD$ to $C$ rates as well as cooperating
 ratio of a strategy. The minimum, maximum, medium and median cooperating ratios
 of each tournament are also included, and finally the number of turns, the
@@ -669,11 +665,11 @@ number of strategies, the number of repetitions and the probabilities of noise
 and the game ending are also included.
 
 Table~\ref{table:correlations} shows the correlation coefficients between the
-measures of Table~\ref{table:manual_measures} the median score and the median
+features of Table~\ref{table:manual_features} the median score and the median
 normalised rank. Note that the correlation for the classifiers is
 not included because they are binary variables and they will be evaluated using a
-different method. The correlation coefficients for all the measures in
-Table~\ref{table:manual_measures} against themselves have also been calculated and a
+different method. The correlation coefficients for all the features in
+Table~\ref{table:manual_features} against themselves have also been calculated and a
 graphical representation can be found in the Appendix~\ref{app:correlations}.
 
 \newcolumntype{g}{>{\columncolor{Gray}}c}
@@ -683,11 +679,11 @@ graphical representation can be found in the Appendix~\ref{app:correlations}.
         \input{correlations_table.tex}
     }
 \end{center}
-\caption{Correlations table between the measures of Table~\ref{table:manual_measures}
+\caption{Correlations table between the features of Table~\ref{table:manual_features}
 the normalised rank and the median score.}\label{table:correlations}
 \end{table}
 
-In standard tournaments the measures  $CC$ to $C$, $C_r$, $C_r / C_{\text{max}}$
+In standard tournaments the features  $CC$ to $C$, $C_r$, $C_r / C_{\text{max}}$
 and the cooperating ratio compared to $C_{\text{median}}$ and $C_{\text{mean}}$
 have a moderate negative effect on the normalised rank, and a moderate positive
 on the median score. The SSE error and the $DD$ to $C$ have the opposite
@@ -718,7 +714,7 @@ both tournaments is given by Figure~\ref{fig:c_r_distributions}. It confirms
 that the winners in noisy tournaments cooperated less than 35\% of the times
 and in probabilistic ending tournaments less than 10\%.
 In noisy probabilistic ending tournaments and in over all the tournaments' results,
-the only measures that had a moderate affect are $C_r/C_{\text{mean}},
+the only features that had a moderate affect are $C_r/C_{\text{mean}},
 C_r/C_{\text{max}}$ and $C_r$. In such environments cooperative behaviour
 appears to be punished by not as much as in noisy and probabilistic ending
 tournaments.
@@ -730,57 +726,74 @@ tournaments.
     ending tournaments.}\label{fig:c_r_distributions}
 \end{figure}
 
-The performances are clustered based on the normalised rank. More specifically,
-they are clustered 3 times into 2 different clusters based on  on whether their
-normalised rank was in the top 5\%, 25\% or 50\% respectively. A random forest
-approach~\cite{breiman2001} is then applied to each performance to predict the cluster to
-which it has been assigned to. The random forest method
-constructs many individual decision trees and the predictions from all trees are
-pooled to make the final prediction. The random forest models are trained on a
-training set of 70\% of the tournaments results. The accuracy of each model
-based on $R^2$ are given by Table~\ref{table:accuracy_random_forest}. The out of
-the bag error~\cite{hastie2005} has also been calculated. The models fit well,
-and a high value of both the accuracy measure on the test data and the OOB error
-indicate that the model is not over fitting.
+To further explore the features that contribute to a strategy's success the
+performances are divided into clusters based on whether they were successful or
+not. A random forest approach~\cite{breiman2001} is then applied to each
+performance to predict the cluster to which it has been assigned to. This allows
+for the importance of each feature in the classification to be calculated. In
+essence, to calculate which are the important features when one is trying to
+predict whether a performance was successful or not.
 
-The performances have also been clustered based on their normalised rank and
-their median score by a \(k-\)means algorithm~\cite{Arthur2007}. The number of
-clusters is not deterministically chosen but it is based on the silhouette
-coefficients~\cite{Rousseeuw1987}. The chosen cluster for each tournament type,
-as well as the accuracy for random forest models are also given in
-Table~\ref{table:accuracy_random_forest}.
+The performances are clustered into successful and unsuccessful clusters based on
+4 different approaches. More specifically:
+
+\begin{itemize}
+    \item \textbf{Approach 1:} The performances are divided into two clusters based
+    on whether their performance was in the top \(5\%\) of their respective tournaments.
+    Thus, whether \(r\) was smaller or larger than 0.05.
+    \item \textbf{Approach 2:} The performances are divided into two clusters based
+    on whether their performance was in the top \(25\%\) of their respective tournaments.
+    Thus, whether \(r\) was smaller or larger than 0.25.
+    \item \textbf{Approach 3:} The performances are divided into two clusters based
+    on whether their performance was in the top \(50\%\) of their respective tournaments.
+    Thus, whether \(r\) was smaller or larger than 0.50.
+    \item \textbf{Approach 4:} The performances are clustered based on their normalised rank and
+    their median score by a \(k-\)means algorithm~\cite{Arthur2007}. The number of
+    clusters is not deterministically chosen but it is based on the silhouette
+    coefficients~\cite{Rousseeuw1987}.
+\end{itemize}
+
+The random forest method constructs many individual decision trees and the
+predictions from all trees are pooled to make the final prediction. The random
+forest models are trained on a training set of 70\% of the tournaments results.
+The accuracy of each model based on $R^2$ and the number of clusters for each
+tournament type (because in the case of Approach 4 it is not
+deterministically chosen) are given by Table~\ref{table:accuracy_random_forest}.
+The out of the bag error (OOB)~\cite{hastie2005} has also been calculated. The
+models fit well, and a high value of both the accuracy measures on the test data
+and the OOB error indicate that the model is not over fitting.
 
 \begin{table}[!htbp]
     \begin{center}
         \resizebox{.9\textwidth}{!}{
         \begin{tabular}{lccccc}
     \toprule
-    Tournament type & Clustering on & Number of clusters & $R^2$ training data &  $R^2$ test data  & $R^2$ OOB score\\
+    Tournament type & Clustering Approach & Number of clusters & $R^2$ training data &  $R^2$ test data  & $R^2$ OOB score\\
     \midrule
-    standard  & top 5\% $r$              & 2  & 0.998831  & 0.987041 & 0.983708 \\
-              & top 25\% $r$             & 2  & 0.998643  & 0.978626 & 0.969202 \\
-              & top 50\% $r$             & 2  & 0.998417  & 0.985217 & 0.976538 \\
-              & $r$  \& normalised score & 2  & 0.998794  & 0.990677 & 0.982959 \\
+    standard  & Approach 1 & 2  & 0.998831  & 0.987041 & 0.983708 \\
+              & Approach 2 & 2  & 0.998643  & 0.978626 & 0.969202 \\
+              & Approach 3 & 2  & 0.998417  & 0.985217 & 0.976538 \\
+              & Approach 4 & 2  & 0.998794  & 0.990677 & 0.982959 \\
     \midrule
-    noisy     & top 5\% $r$              & 2 & 0.996677  & 0.950572 & 0.935383\\
-              & top 25\% $r$             & 2 & 0.996677  & 0.950572 & 0.935383\\
-              & top 50\% $r$             & 2 & 0.996677  & 0.950572 & 0.935383\\
-              & $r$  \& normalised score & 3 & 0.996677  & 0.950572 & 0.935383\\
+    noisy     & Approach 1  & 2 & 0.996677  & 0.950572 & 0.935383\\
+              & Approach 2  & 2 & 0.996677  & 0.950572 & 0.935383\\
+              & Approach 3  & 2 & 0.996677  & 0.950572 & 0.935383\\
+              & Approach 4  & 3 & 0.996677  & 0.950572 & 0.935383\\
     \midrule
-    probabilistic ending & top 5\% $r$              & 2 & 0.999592  & 0.995128 & 0.992819 \\
-                         & top 25\% $r$             & 2 & 0.999592  & 0.995128 & 0.992819 \\
-                         & top 50\% $r$             & 2 & 0.999592  & 0.995128 & 0.992819 \\
-                         & $r$  \& normalised score & 2 & 0.999592  & 0.995128 & 0.992819 \\
+    probabilistic ending & Approach 1  & 2 & 0.999592  & 0.995128 & 0.992819 \\
+                         & Approach 2  & 2 & 0.999592  & 0.995128 & 0.992819 \\
+                         & Approach 3  & 2 & 0.999592  & 0.995128 & 0.992819 \\
+                         & Approach 4  & 2 & 0.999592  & 0.995128 & 0.992819 \\
     \midrule
-    noisy probabilistic ending & top 5\% $r$              & 2 & 0.990490  & 0.813905 & 0.791418\\
-                               & top 25\% $r$             & 2 & 0.990490  & 0.813905 & 0.791418\\
-                               & top 50\% $r$             & 2 & 0.990490  & 0.813905 & 0.791418\\
-                               & $r$  \& normalised score & 4 & 0.990490  & 0.813905 & 0.791418\\
+    noisy probabilistic ending & Approach 1  & 2 & 0.990490  & 0.813905 & 0.791418\\
+                               & Approach 2  & 2 & 0.990490  & 0.813905 & 0.791418\\
+                               & Approach 3  & 2 & 0.990490  & 0.813905 & 0.791418\\
+                               & Approach 4  & 4 & 0.990490  & 0.813905 & 0.791418\\
     \midrule
-    over \numberofalltournaments tournaments & top 5\% $r$               & 2 & 0.993396 & 0.913409 & 0.898059 \\
-                                             & top 25\% $r$              & 2 & 0.993396 & 0.913409 & 0.898059 \\
-                                             & top 50\% $r$              & 2 & 0.993396 & 0.913409 & 0.898059 \\
-                                             & $r$  \& normalised score  & 3 & 0.993396 & 0.913409 & 0.898059 \\
+    over \numberofalltournaments tournaments & Approach 1  & 2 & 0.993396 & 0.913409 & 0.898059 \\
+                                             & Approach 2  & 2 & 0.993396 & 0.913409 & 0.898059 \\
+                                             & Approach 3  & 2 & 0.993396 & 0.913409 & 0.898059 \\
+                                             & Approach 4  & 3 & 0.993396 & 0.913409 & 0.898059 \\
     \bottomrule
         \end{tabular}}
     \end{center}
@@ -788,17 +801,17 @@ Table~\ref{table:accuracy_random_forest}.
     \label{table:accuracy_random_forest}
 \end{table}
 
-The importance that the measures of Table~\ref{table:manual_measures} had on
-each classification task; to which cluster a performance was assigned to based
-on the normalised rank, and their normalised rank and median score have been
+The importance that the features of Table~\ref{table:manual_features} had on
+each random forest model while the perfomances were clustered based on the
+different approaches have been
 calculated and are given by Figures~\ref{fig:clustering_importance_standard},
 \ref{fig:clustering_importance_noise},~\ref{fig:clustering_importance_probend},
 \ref{fig:clustering_importance_probend_noise}
 and~\ref{fig:clustering_importance_overall}. These show that the classifiers
 stochastic, make use of game and make use of length have no significant effect,
-and several of the measures that are highted by the importance are inline with
+and several of the features that are highlighted by the importance are inline with
 the correlation results. Moreover, the smoothing parameter \(k\) appears to no
-have a significant effect either. The most important measures based on the
+have a significant effect either. The most important features based on the
 random forest analysis were $C_{r} / C_{median}$ and $C_r / C_{mean}$.
 
 \begin{figure}[!htbp]
@@ -946,14 +959,14 @@ random forest analysis were $C_{r} / C_{median}$ and $C_r / C_{mean}$.
     clustering methods.}\label{fig:clustering_importance_overall}
 \end{figure}
 
-The effect of both these measures can be further explored. In
+The effect of both these features can be further explored. In
 Figure~\ref{fig:mean_median_std} the distributions of \(C_r / C_{\text{mean}}\)
 and \(C_r / C_{\text{median}}\) are given for the winners in standard tournaments. A value of \(C_r /
 C_{\text{mean}} = 1\) imply that the cooperating ratio of the winner was the
 same as the mean/median cooperating ratio of the tournament. In standard tournaments, the mean
 for both ratios is 1. Therefore, an effective strategy in standard tournaments
 was the mean/median cooperator of its respective tournament. In comparison,
-Figure~\ref{fig:mean_median_noisy} shows the distributions of the measures for
+Figure~\ref{fig:mean_median_noisy} shows the distributions of the features for
 the winners in noisy tournaments where the mean is at 0.67. Thereupon the winners
 cooperated 67\% of the times the mean/median cooperator did. This analysis is
 applied to the rest of the tournaments and the distributions are given by
@@ -1000,7 +1013,7 @@ strategies prevail and this result is once again confirmed in this section.
     and \(C_r / C_{\text{median}}\) for winners of over all the tournaments.}\label{fig:mean_median_overall}
 \end{figure}
 
-In this section the effect of several measures, regarding a strategy's behaviour
+In this section the effect of several features, regarding a strategy's behaviour
 and the tournament in which it participated on its performance were presented.
 This was done using two approaches. Correlation coefficients and a random forest
 analysis. The results of these are summarised in the following section.
@@ -1013,11 +1026,12 @@ the analysis demonstrated that, although for specific tournament types such as
 standard and probabilistic ending tournaments, dominant strategies exist
 there is not a single dominant type of strategies if the environments
 vary. Moreover, a strategy with a theory of mind should aim to adapt its behaviour
-based on the mean and median cooperators.
+based on the mean and median cooperators and should in general not be too
+cooperative.
 
 The \numberofstrategies strategies used in this manuscript have been mainly for
 the literature, and they have been accessible due to an open source software
-called Axelrod-Python. The software was used to generate a total of
+called the Axelrod-Python library. The software was used to generate a total of
 \numberofalltournaments computer tournaments results with different number of
 strategies and different participants each time. The data collection was
 described in Section~\ref{section:data_collection}. In
@@ -1036,24 +1050,23 @@ The top rank strategies were performing both well and bad, and this indicates
 that in noisy tournaments there are not strategies that can guarantee winning.
 Overall, the top ranked strategies differed from one tournament type to
 another and the mechanism behind the winning strategies were all different.
-Even strategies designed to do good in one setting did better in others.
-On the whole ... (the ipd interactions are unique and there is no winning
-strategy) %TODO help from Vince
+Even strategies designed to perform well in one setting were demonstrated to be
+better in others.
 
 Section~\ref{section:evaluation_of_performance}, covered an analysis of
-performance based on several measures associated with a strategy and with the
+performance based on several features associated with a strategy and with the
 environments it was competing. The results of this analysis showed that a
 strategy's characteristics such as whether or not it's stochastic, and the information it
 used regarding the game had no effect on the strategy's success. The most
-important factors have been those that compared the strategy's behaviour to it's
+important features have been those that compared the strategy's behaviour to it's
 environment. The cooperating ratio of the strategy compared to the mean and
 median cooperator was highlighted as the most important feature in the analysis.
 More specifically, if a strategy were to enter a tournament with a theory of
 mind of its environment it would choose to be the median cooperator in standard
-tournaments, to cooperate 10\% in probabilistic ending tournaments and 
+tournaments, to cooperate 10\% of the time the median cooperator did in probabilistic ending tournaments and 
 60\% in noisy and noisy probabilistic
-tournaments of the times the median cooperator did. Lastly, if a strategy was aware of the opponents but not of the
-setting on the tournament, a strategy would be more likely to be successful if
+tournaments. Lastly, if a strategy was aware of the opponents but not of the
+setting of the tournament, a strategy would be more likely to be successful if
 it were to identify the median cooperator and cooperated 67\% of the times that
 they did.
 
@@ -1069,7 +1082,7 @@ could be applied and provide new insights in the field.
 A variety of software have been used in this work:
 
 \begin{itemize}
-    \item The Axelrod library for IPD simulations~\cite{axelrodproject}.
+    \item The Axelrod-Python library for IPD simulations~\cite{axelrodproject}.
     \item The Matplotlib library for visualisation~\cite{hunter2007matplotlib}.
     \item The Numpy library for data manipulation~\cite{walt2011numpy}.
     \item The scikit-learn library for data analysis~\cite{scikit-learn}.
@@ -1085,7 +1098,7 @@ A variety of software have been used in this work:
     \resizebox{.7\textwidth}{!}{
     \begin{tabular}{llc}
     \toprule
-measure & measure explanation \\
+feature & feature explanation \\
  \midrule
 stochastic                  & If a strategy is stochastic \\
 makes use of game           & If a strategy makes used of the game information  \\
@@ -1113,15 +1126,14 @@ $k$                         & The number that a given tournament is repeated \\
     \bottomrule
         \end{tabular}}
     \end{center}
-    \caption{The measures which are included in the performance evaluation analysis.}
+    \caption{The features which are included in the performance evaluation analysis.}\label{table:parameters_summary}
 \end{table}
 
 
 
 \section{List of strategies}\label{app:list_of_players}
 
-The strategies used in this study which are from Axelrod version 3.0.0
-\cite{axelrodproject}.
+The strategies used in this study which are from Axelrod-Python library version 3.0.0.
 
 \begin{multicols}{3}
 	\begin{enumerate}
@@ -1132,42 +1144,42 @@ The strategies used in this study which are from Axelrod version 3.0.0
 
 \section{Correlation coefficients}\label{app:correlations}
 
-A graphical representation of the correlation coefficients for the measures in
-Table~\ref{table:manual_measures}.
+A graphical representation of the correlation coefficients for the features in
+Table~\ref{table:manual_features}.
 
 \begin{figure}[!htbp]
         \begin{center}
             \includegraphics[width=.75\linewidth]{../images/standard_correlation_plot.pdf}
         \end{center}
-        \caption{Correlation coefficients of measures in Table~\ref{table:manual_measures}
+        \caption{Correlation coefficients of features in Table~\ref{table:manual_features}
         for standard tournaments}
 \end{figure}
 \begin{figure}[!htbp]
     \begin{center}
         \includegraphics[width=.75\linewidth]{../images/noise_correlation_plot.pdf}
     \end{center}
-    \caption{Correlation coefficients of measures in Table~\ref{table:manual_measures}
+    \caption{Correlation coefficients of features in Table~\ref{table:manual_features}
     for noisy tournaments}
 \end{figure}
 \begin{figure}[!htbp]
     \begin{center}
         \includegraphics[width=.75\linewidth]{../images/probend_correlation_plot.pdf}
     \end{center}
-    \caption{Correlation coefficients of measures in Table~\ref{table:manual_measures}
+    \caption{Correlation coefficients of features in Table~\ref{table:manual_features}
     for probabilistic ending tournaments}
 \end{figure}
 \begin{figure}[!htbp]
     \begin{center}
         \includegraphics[width=.75\linewidth]{../images/probend_noise_correlation_plot.pdf}
     \end{center}
-    \caption{Correlation coefficients of measures in Table~\ref{table:manual_measures}
+    \caption{Correlation coefficients of features in Table~\ref{table:manual_features}
     for noisy probabilistic ending tournaments}
 \end{figure}
 \begin{figure}[!htbp]
     \begin{center}
         \includegraphics[width=.75\linewidth]{../images/merged_correlation_plot.pdf}
     \end{center}
-    \caption{Correlation coefficients of measures in Table~\ref{table:manual_measures}
+    \caption{Correlation coefficients of features in Table~\ref{table:manual_features}
     for data set}
 \end{figure}
 
