fixes typos and table with r squares

--- a/nbs/0.0.1 Output to tables.ipynb
+++ b/nbs/0.0.1 Output to tables.ipynb
@@ -421,6 +421,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**R squares**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "& Approach 1  & 0.998831& 0.987041& 0.983708\n",
+      "& Approach 2  & 0.998643& 0.978626& 0.969202\n",
+      "& Approach 3  & 0.998417& 0.985217& 0.976538\n",
+      "& Approach 4  & 0.998794& 0.990677& 0.982959\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, texfile in enumerate(['../new_output/standard/r_square_cluster_on_0.05.txt',\n",
+    "                             '../new_output/standard/r_square_cluster_on_0.25.txt',\n",
+    "                             '../new_output/standard/r_square_cluster_on_0.5.txt',\n",
+    "                             '../k_means_output/standard/r_square_.txt']):\n",
+    "    with open(texfile, 'r') as textfile:\n",
+    "        string = textfile.read()\n",
+    "\n",
+    "        print(f'& Approach {i + 1}  &' + '&'.join([st.split(':')[-1] for st in string.split('\\n')[:-1]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "& Approach 1  & 0.997786& 0.972229& 0.968332\n",
+      "& Approach 2  & 0.997442& 0.963254& 0.955219\n",
+      "& Approach 3  & 0.997152& 0.953164& 0.940528\n",
+      "& Approach 4  & 0.996923& 0.950728& 0.935444\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, texfile in enumerate(['../new_output/noise/r_square_cluster_on_0.05.txt',\n",
+    "                             '../new_output/noise/r_square_cluster_on_0.25.txt',\n",
+    "                             '../new_output/noise/r_square_cluster_on_0.5.txt',\n",
+    "                             '../k_means_output/noise/r_square_.txt']):\n",
+    "    with open(texfile, 'r') as textfile:\n",
+    "        string = textfile.read()\n",
+    "\n",
+    "        print(f'& Approach {i + 1}  &' + '&'.join([st.split(':')[-1] for st in string.split('\\n')[:-1]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "& Approach 1  & 0.997909& 0.981490& 0.978120\n",
+      "& Approach 2  & 0.997883& 0.973492& 0.967150\n",
+      "& Approach 3  & 0.990448& 0.890068& 0.875822\n",
+      "& Approach 4  & 0.999636& 0.995183& 0.992809\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, texfile in enumerate(['../new_output/probend/r_square_cluster_on_0.05.txt',\n",
+    "                             '../new_output/probend/r_square_cluster_on_0.25.txt',\n",
+    "                             '../new_output/probend/r_square_cluster_on_0.5.txt',\n",
+    "                             '../k_means_output/probend/r_square_.txt']):\n",
+    "    with open(texfile, 'r') as textfile:\n",
+    "        string = textfile.read()\n",
+    "\n",
+    "        print(f'& Approach {i + 1}  &' + '&'.join([st.split(':')[-1] for st in string.split('\\n')[:-1]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "& Approach 1  & 0.995347& 0.957846& 0.952353\n",
+      "& Approach 2  & 0.992813& 0.909346& 0.898613\n",
+      "& Approach 3  & 0.990579& 0.824794& 0.806540\n",
+      "& Approach 4  & 0.989465& 0.841652& 0.824052\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, texfile in enumerate(['../new_output/probend_noise/r_square_cluster_on_0.05.txt',\n",
+    "                             '../new_output/probend_noise/r_square_cluster_on_0.25.txt',\n",
+    "                             '../new_output/probend_noise/r_square_cluster_on_0.5.txt',\n",
+    "                             '../k_means_output/probend_noise/r_square_.txt']):\n",
+    "    with open(texfile, 'r') as textfile:\n",
+    "        string = textfile.read()\n",
+    "\n",
+    "        print(f'& Approach {i + 1}  &' + '&'.join([st.split(':')[-1] for st in string.split('\\n')[:-1]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "& Approach 1  & 0.997271& 0.972914& 0.969198\n",
+      "& Approach 2  & 0.996323& 0.951194& 0.940563\n",
+      "& Approach 3  & 0.993707& 0.906941& 0.891532\n",
+      "& Approach 4  & 0.993556& 0.913335& 0.898453\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, texfile in enumerate(['../new_output/merged/r_square_cluster_on_0.05.txt',\n",
+    "                             '../new_output/merged/r_square_cluster_on_0.25.txt',\n",
+    "                             '../new_output/merged/r_square_cluster_on_0.5.txt',\n",
+    "                             '../k_means_output/merged/r_square_.txt']):\n",
+    "    with open(texfile, 'r') as textfile:\n",
+    "        string = textfile.read()\n",
+    "\n",
+    "        print(f'& Approach {i + 1}  &' + '&'.join([st.split(':')[-1] for st in string.split('\\n')[:-1]]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
