--- a/paper/main.tex
+++ b/paper/main.tex
@@ -170,7 +170,7 @@ version 3.0.0. APL allows for different types of IPD computer
 tournaments to be simulated whilst containing a list of over 180 strategies.
 Most of these are strategies described in the literature with a few exceptions
 being strategies that have been contributed specifically to the package. This
-paper make use of \numberofstrategies strategies implemented in version 3.0.0. A
+paper makes use of \numberofstrategies strategies implemented in version 3.0.0. A
 list of the strategies is given in the Appendix~\ref{app:list_of_players}.
 Although APL features several tournament types, this work considers
 standard, noisy, probabilistic ending and noisy probabilistic ending
@@ -427,15 +427,15 @@ opponent.
 The 15 top ranked strategies in probabilistic ending tournaments include
 Fortress 3, Fortress 4 (both introduced in~\cite{Ashlock2006}),
 Raider~\cite{Ashlock2014} and Solution B1~\cite{Ashlock2014}, which are
-strategies based on finite state automata introduced by Daniel and Wendy
+strategies based on finite state automata introduced by Daniel Ashlock and Wendy
 Ashlock. These strategies have been evolved using reinforcement learning, however,
 there were trained to maximise their payoffs in tournaments with fixed turns
 (150 specifically) and not in probabilistic ending ones. In probabilistic ending
 tournaments it appears that the top ranks are mostly occupied by defecting
 strategies. These include Better and Better, Gradual Killer, Hard Prober (all
 from ~\cite{prison}), Bully (Reverse Tit For Tat)~\cite{Nachbar1992} and
-Defector. Thus, it's surprisingly that EasyGo and Fool Me Forever which are
-strategies that will defect until their opponent defect, then they will cooperate
+Defector. Thus, it's surprising that EasyGo and Fool Me Forever which are
+strategies that will defect until their opponent defects, then they will cooperate
 until the end, ranked $14^{\text{th}}$ and $15^{\text{th}}$. Upon inspection,
 it was found that they are actually the same strategy. This was not known to
 the authors at the time of data collection. Figure~\ref{fig:probend_results}
@@ -558,7 +558,7 @@ original tournament and Forgetful Fool Me Once is based on the same approach as
 Grudger. Overall the top 15 strategies are fundamentally different. Some are cheaters,
 some are complex, others are simple deterministic strategies and strategies based
 on teams. The results of \numberofalltournaments tournaments used in this work imply the following:
-they is not a single type of strategy which can performance well in any IPD interaction.
+they is not a single type of strategy performs well in any IPD interaction.
 
 \begin{figure}[!htbp]
     \centering
@@ -707,7 +707,7 @@ tournaments the higher the rates of cooperation the lower a strategy's success
 and median score. A strategy would want to cooperate less than both
 the mean and median cooperator in such settings. In probabilistic ending
 tournaments the correlations coefficients have a larger values, indicating a
-stronger effect. Thus a strategy will be punished more by it's cooperative
+stronger effect. Thus a strategy will be punished more by its cooperative
 behaviour in probabilistic ending environments, this was seen in Section~\ref{section:evaluation_of_performance}
 as well. The distributions of the $C_r$ of the winners in
 both tournaments is given by Figure~\ref{fig:c_r_distributions}. It confirms
@@ -770,30 +770,30 @@ and the OOB error indicate that the model is not over fitting.
     \toprule
     Tournament type & Clustering Approach & Number of clusters & $R^2$ training data &  $R^2$ test data  & $R^2$ OOB score\\
     \midrule
-    standard  & Approach 1 & 2  & 0.998831  & 0.987041 & 0.983708 \\
-              & Approach 2 & 2  & 0.998643  & 0.978626 & 0.969202 \\
-              & Approach 3 & 2  & 0.998417  & 0.985217 & 0.976538 \\
-              & Approach 4 & 2  & 0.998794  & 0.990677 & 0.982959 \\
+    standard  & Approach 1  & 2 & 0.998831  & 0.987041    & 0.983708 \\
+              & Approach 2  & 2 & 0.998643  & 0.978626    & 0.969202 \\
+              & Approach 3  & 2 & 0.998417  & 0.985217    & 0.976538 \\
+              & Approach 4  & 2 & 0.998794  & 0.990677    & 0.982959 \\
     \midrule
-    noisy     & Approach 1  & 2 & 0.996677  & 0.950572 & 0.935383\\
-              & Approach 2  & 2 & 0.996677  & 0.950572 & 0.935383\\
-              & Approach 3  & 2 & 0.996677  & 0.950572 & 0.935383\\
-              & Approach 4  & 3 & 0.996677  & 0.950572 & 0.935383\\
+    noisy     & Approach 1  & 2 & 0.997786  & 0.972229    & 0.968332\\
+              & Approach 2  & 2 & 0.997442  & 0.963254    & 0.955219\\
+              & Approach 3  & 2 & 0.997152  & 0.953164    & 0.940528\\
+              & Approach 4  & 3 & 0.996923  & 0.950728    & 0.935444\\
     \midrule
-    probabilistic ending & Approach 1  & 2 & 0.999592  & 0.995128 & 0.992819 \\
-                         & Approach 2  & 2 & 0.999592  & 0.995128 & 0.992819 \\
-                         & Approach 3  & 2 & 0.999592  & 0.995128 & 0.992819 \\
-                         & Approach 4  & 2 & 0.999592  & 0.995128 & 0.992819 \\
+    probabilistic ending & Approach 1 & 2 & 0.997909   & 0.981490  & 0.978120 \\
+                         & Approach 2 & 2 & 0.997883   & 0.973492  & 0.967150 \\
+                         & Approach 3 & 2 & 0.990448   & 0.890068  & 0.875822 \\
+                         & Approach 4 & 2 & 0.999636   & 0.995183  & 0.992809 \\
     \midrule
-    noisy probabilistic ending & Approach 1  & 2 & 0.990490  & 0.813905 & 0.791418\\
-                               & Approach 2  & 2 & 0.990490  & 0.813905 & 0.791418\\
-                               & Approach 3  & 2 & 0.990490  & 0.813905 & 0.791418\\
-                               & Approach 4  & 4 & 0.990490  & 0.813905 & 0.791418\\
+    noisy probabilistic ending & Approach 1  & 2 & 0.995347 & 0.957846   & 0.952353\\
+                               & Approach 2  & 2 & 0.992813 & 0.909346   & 0.898613\\
+                               & Approach 3  & 2 & 0.990579 & 0.824794   & 0.806540\\
+                               & Approach 4  & 4 & 0.989465 & 0.841652   & 0.824052\\
     \midrule
-    over \numberofalltournaments tournaments & Approach 1  & 2 & 0.993396 & 0.913409 & 0.898059 \\
-                                             & Approach 2  & 2 & 0.993396 & 0.913409 & 0.898059 \\
-                                             & Approach 3  & 2 & 0.993396 & 0.913409 & 0.898059 \\
-                                             & Approach 4  & 3 & 0.993396 & 0.913409 & 0.898059 \\
+    over \numberofalltournaments tournaments   & Approach 1 & 2 & 0.997271& 0.972914& 0.969198 \\
+                                               & Approach 2 & 2 & 0.996323& 0.951194& 0.940563 \\
+                                               & Approach 3 & 2 & 0.993707& 0.906941& 0.891532 \\
+                                               & Approach 4 & 3 & 0.993556& 0.913335& 0.898453 \\
     \bottomrule
         \end{tabular}}
     \end{center}
@@ -1053,12 +1053,12 @@ another and the mechanism behind the winning strategies were all different.
 Even strategies designed to perform well in one setting were demonstrated to be
 better in others.
 
-Section~\ref{section:evaluation_of_performance}, covered an analysis of
+Section~\ref{section:evaluation_of_performance} covered an analysis of
 performance based on several features associated with a strategy and with the
-environments it was competing. The results of this analysis showed that a
+environments in which it was competing. The results of this analysis showed that a
 strategy's characteristics such as whether or not it's stochastic, and the information it
 used regarding the game had no effect on the strategy's success. The most
-important features have been those that compared the strategy's behaviour to it's
+important features have been those that compared the strategy's behaviour to its
 environment. The cooperating ratio of the strategy compared to the mean and
 median cooperator was highlighted as the most important feature in the analysis.
 More specifically, if a strategy were to enter a tournament with a theory of
@@ -1118,7 +1118,7 @@ $CC$ to $C$ rate            & The probability a strategy will cooperate after a 
 $CD$ to $C$ rate            & The probability a strategy will cooperate after being betrayed by the opponent \\
 $DC$ to $C$ rate            & The probability a strategy will cooperate after betraying the opponent\\
 $DD$ to $C$ rate            & The probability a strategy will cooperate after a mutual defection\\
-$p_n$                       & The probability of a player's action being flip at each interaction \\
+$p_n$                       & The probability of a player's action being flipped at each interaction \\
 $n$                         & The number of turns \\
 $p_e$                       & The probability of a match ending in the next turn \\
 $N$                         & The number of strategies in the tournament \\
