--- a/paper/performance_merged_table.tex
+++ b/paper/performance_merged_table.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lc}
 \toprule
-Name                       &    $\bar{r}$ \\
+Name                       &          \(\bar{r}\)\\
 \midrule
 Limited Retaliate 3        &          0.28609 \\
 Retaliate 3                &          0.29630 \\
