--- a/paper/main.tex
+++ b/paper/main.tex
@@ -48,17 +48,15 @@ behavioural interactions. From the celebrated performance of Tit for Tat, to the
 introduction of the zero-determinant strategies, to the use of sophisticated
 structures such as neural networks, the literature has been exploring the
 performance of strategies in the game for years. The results of the literature,
-however, have been relying on the performance of specific strategies in a finite
-number of tournaments, whereas this manuscript evaluates
-\numberofstrategies strategies' effectiveness in more than 40000 tournaments.
-The top ranked strategies are presented, and moreover, the impact of features on
-their success are analysed using machine learning techniques. The analysis
-determines that the cooperating ratio of a
-strategy in a given tournament compared to the mean and median cooperator is the
-most important feature. The conclusions are distinct for different types of
-tournaments. For instance a strategy with a theory of mind would aim to be the mean/median
-cooperator in standard tournaments, whereas in tournaments with probabilistic
-ending it would aim to cooperate 10\% of the times the median cooperator did.
+however, have been relying on a small number of somewhat arbitrarily selected
+strategies in a very small number of tournaments,
+casting doubt on the generalizability of results from statistical perspective.
+This manuscript evaluates \numberofstrategies strategies in more than 40000
+tournaments, presents the top performing strategies, and analyzes their
+salient features.
+The outcomes support that a strategy with a theory of mind should adjust it’s
+cooperations based on the mean/median cooperator of its environment to be
+successful; the adjustments are distinct for different tournament types.
 \end{abstract}
 
 \section{Background}
